--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -8,27 +8,29 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="181dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Register"
         android:textColor="@color/black"
         android:textSize="48sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="115dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/rollno"
-        android:layout_width="0dp"
+        android:layout_width="211dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:ems="10"
         android:hint="Roll no."
         android:inputType="textPersonName"
         android:textColorHint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/password1"
@@ -39,18 +41,20 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:textColorHint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/email"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintStart_toStartOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <Button
         android:id="@+id/registerbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
-        android:text="Button"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:text="signup"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/password2"
-        tools:layout_editor_absoluteX="136dp" />
+        app:layout_constraintEnd_toEndOf="@+id/password2"
+        app:layout_constraintTop_toBottomOf="@+id/password2" />
 
     <EditText
         android:id="@+id/password2"
@@ -58,11 +62,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Retype Password"
         android:inputType="textPassword"
         android:textColorHint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/password1"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintStart_toStartOf="@+id/password1"
+        app:layout_constraintTop_toBottomOf="@+id/password1" />
 
     <EditText
         android:id="@+id/email"
@@ -73,7 +77,7 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/rollno"
-        tools:layout_editor_absoluteX="100dp" />
+        app:layout_constraintStart_toStartOf="@+id/rollno"
+        app:layout_constraintTop_toBottomOf="@+id/rollno" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
