--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -24,25 +24,10 @@
         android:fontFamily="@font/montserrat_subrayada"
         android:text="Login to continue"
         android:textSize="25sp"/>
-    <LinearLayout
+
+    <Button
+        android:id="@+id/registerbtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical">
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rollno"
-        android:hint="Roll No."
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-        />
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:id="@+id/password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        />
-</LinearLayout>
+        android:text="Signup" />
 </LinearLayout>
