--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#006064">
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,6 +18,7 @@
         android:layout_marginRight="60dp"
         android:layout_marginBottom="300dp"
         android:src="@mipmap/ic_launcher"
+        android:transitionName="logo_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +34,14 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:transitionName="text"
         android:layout_marginBottom="150dp"
         android:fontFamily="@font/montserrat_subrayada"
-        android:text="@string/sait_official"
-        android:textSize="50sp"
+        android:text="Welcome to Mediator"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
