--- a/app/src/main/res/layout-v21/activity_register_page.xml
+++ b/app/src/main/res/layout-v21/activity_register_page.xml
@@ -21,8 +21,7 @@
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:fontFamily="@font/montserrat_subrayada"
-        android:transitionName="button_text"/>
+        android:fontFamily="@font/montserrat_subrayada" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
