Login page added.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,13 @@
         <item name="android:windowContentTransitions">true</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.SaitMediator.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.SaitMediator.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SaitMediator.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
