login page working!

--- a/app/src/main/res/layout-v21/activity_login_page.xml
+++ b/app/src/main/res/layout-v21/activity_login_page.xml
@@ -76,6 +76,7 @@
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
         <Button
+            android:id="@+id/forget_pwsd"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
@@ -105,6 +106,12 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
